<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安卓测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_find">查找</string>
    <string name="action_back">退后</string>
    <string name="action_new">新建</string>

    <string name="close_and_exit">退出应用</string>
    <string name="empty_description">空的描述，等待添加</string>
    <string name="desc_simpleadapter">SimpleAdapter 比 ArrayAdapter更加灵活，定制性更强，需要重点掌握</string>

    <!-- TestPageActivity 中使用的文本资源 -->
    <string name="all_test_home">测试菜单</string>

    <!-- AsyncTaskTestActivity 中使用的文本资源  -->
    <string name="getwebpage">访问网页</string>

    <!-- MenuTestActivity 中使用的文本资源  -->
    <string name="btnImageSwitch">切换图片</string>
    <string name="btnText">切换文字</string>
    <string name="changeColor">切换背景色</string>
    <string name="changeSize">改变文字大小</string>
    <string name="sharedMenu">共享菜单</string>
    <string name="picLast">上一张图片</string>
    <string name="picNext">下一张个图片</string>
    <string name="picRandom">随机一张图片</string>

    <!-- GalleryTestActivity 中使用的文本资源 -->
    <string name="photo_desc">妹子图</string>

    <!--  MyRecorderTestActivity 中使用的文本资源  -->
    <string name="recStart">开始录音</string>
    <string name="recStop">停止录音</string>
    <string name="audioPlay">播放录音</string>
    <string name="audioFinish">停止播放</string>
    <string name="recWarnning">检查是否开启录音、存储权限</string>


    <!-- imooc 老师 summer321 讲解 Fragment 使用 -->
    <!-- FragmentTestActivity -->
    <string name="home_shop">热销排行</string>
    <string name="home_share">手机专享</string>
    <string name="home_gift">我的礼品</string>
    <string name="home_order">我的订单</string>

    <!--RelaviteLayoutActivity-->
    <string name="reminder_name">Reminder name</string>
    <string name="done">Done</string>

    <!-- 各个活动的描述性语句 -->
    <string name="test_autocomplete">测试AutoCompleteTextView</string>
    <string name="test_image">测试ImageView</string>
    <string name="test_listview">测试ListView和ArrayAdapter</string>
    <string name="test_simpleadapter">测试ListView和SimpleAdapter</string>
    <string name="test_asynctask">测试AsyncTask</string>
    <string name="test_gallery">测试Gallery</string>
    <string name="test_imageswitcher">测试ImageSwitcher</string>
    <string name="test_gridview">测试GridView</string>
    <string name="test_volley">测试Volley网络请求库</string>
    <string name="test_menu">测试菜单ContextMenu</string>
    <string name="test_audiorecorder">测试录音机</string>
    <string name="test_mediarecord">官方例程MediaRecord</string>
    <string name="test_fragment">Fragment 动态切换</string>
    <string name="test_relativelayout">相对布局</string>


</resources>
